--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,45 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-2 search-input">
-      <form (ngSubmit)="searchAppts(searchInput.value)" #searchForm="ngForm">
-        <div class="form-group">
-          <input type="text" class="form-control input-lg" style="outline:none" id="myInput" #searchInput placeholder="Search" />
-          <i class="fa fa-search"></i>
+    <div class="col-md-12 header">
+      <div class="row">
+        <div class="col-sm-2 search-input">
+          <form (ngSubmit)="searchAppts(searchInput.value)" #searchForm="ngForm">
+            <div class="form-group">
+              <input type="text" class="form-control input-lg" style="outline:none" id="myInput" #searchInput placeholder="Search" />
+              <i class="fa fa-search"></i>
+            </div>
+          </form>
         </div>
-      </form>
+
+        <div class="col-sm-8 col-sm-offset-2 text-center">
+          <!-- TODO transitions from month to month and hover over each card-->
+          <i class="fa fa-caret-left month-arrow" (click)="decreaseMonth()"></i>
+          <span class="month-carousel">{{monthsTxt[month]}} {{year}}</span>
+          <i class="fa fa-caret-right month-arrow" (click)="increaseMonth()"></i>
+        </div>
+      </div>
     </div>
-
-    <div class="text-center col-sm-8 col-sm-offset-2">
-      <!-- TODO transitions from month to month and hover over each card-->
-      <i class="fa fa-caret-left month-arrow" (click)="decreaseMonth()"></i>
-      <span class="month-carousel">{{monthsTxt[month]}} {{year}}</span>
-      <i class="fa fa-caret-right month-arrow" (click)="increaseMonth()"></i>
-    </div>
-
-
-
     <div class="calendar" [ngClass]=" showResults ? 'col-md-8': 'col-md-12'">
-      <div *ngFor="let day of daysTxt" class="card card-day" [ngClass]=" {'float-left': day!='Sun'}">
+      <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]=" {'float-left': i%7!=0}">
         {{day}}
       </div>
       <br>
-      <!-- TODO fix the conditional styling -->
-      <div *ngFor="let day of Object.keys(appointments[month])" class="card card-month" [ngClass]="{'float-left': day%7!=0}" [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#f4f5f7', 'border':'dashed', 'border-color':'grey'}:{'background-color':'white'}">
-        <div class="card-body" (dblclick)="openModal(template, month, day)">
+      <!-- days from previous month -->
+      <div *ngFor="let day of dayOfWeekFirstOfMonth" style="background-color:rgb(243, 240, 240)" class="card card-month float-left">
+        <div class="card-body">
           <h5 class="card-title">{{day}}</h5>
-          <div *ngFor="let appt of appointments[month][day]; index as i; ">
-            <a href="#" class="card-link">{{appt.title}}</a>
-            <i class="fa fa-times" aria-hidden="true" (click)="removeAppt(month, day, i)"></i>
+        </div>
+      </div>
+
+      <!-- TODO fix the conditional styling -->
+      <div *ngFor="let day of Object.keys(appointments[month]); let i of index;" class="card card-month" [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0 }"
+        [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#f4f5f7', 'border':'dashed', 'border-color':'grey'}:{'background-color':'white'}">
+        <div class="card-body" (dblclick)="openModal(template, month, day)">
+
+          <h5 class="card-title">{{day}}</h5>
+          <div *ngFor="let appt of appointments[month][day]; index as i;">
+            <span class="card-link" (click)="selectAppt(month, day, i)" [style.background-color]="isSelected(month, day, i)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
+            <!-- <i class="fa fa-times" aria-hidden="true" (click)="removeAppt(month, day, i)"></i> -->
           </div>
         </div>
       </div>
@@ -51,7 +61,6 @@
 </div>
 
 <!-- TODO extract to separate component -->
-
 <ng-template #template>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Add Appointment</h4>
@@ -62,7 +71,7 @@
       <div class="form-group row">
         <label for="title" class="col-sm-2 col-form-label">Title</label>
         <div class="col-sm-10">
-          <input type="text"  name="title" class="form-control" id="title" [(ngModel)]="appointment.title" required>
+          <input type="text" name="title" class="form-control" id="title" [(ngModel)]="appointment.title" required>
         </div>
       </div>
 
@@ -78,13 +87,22 @@
           <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"></timepicker>
         </div>
       </div>
+      <div class="form-group row">
+        <label for="tel" class="col-sm-2 col-form-label">Phone #</label>
+        <div class="col-sm-8">
+          <input type="tel" name="tel" [(ngModel)]="appointment.phoneNumber">
+        </div>
+        <div class="col-sm-8">
+          <input type="checkbox" name="textNotification" [(ngModel)]="appointment.textNotification">
+        </div>
+      </div>
+
+      {{appointment|json}}
     </form>
-    {{appointment|json}}
   </div>
 
   <div class="modal-footer">
     <button class="btn btn-danger" (click)="modalRef.hide()">Cancel</button>
     <button type="submit" class="btn btn-success" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
   </div>
-
 </ng-template>
