--- a/src/app/account-widget/account-widget.component.html
+++ b/src/app/account-widget/account-widget.component.html
@@ -6,6 +6,6 @@
   <div *ngIf="showMenu" class="preferences card">
     <div class="card-body">
         <h6 (click)="signout()">Signout</h6> 
-        <h6>Account Settings</h6>
+        <h6 (click)="goToAccountSettings()">Account Settings</h6>
     </div>
   </div>
