--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -36,7 +36,7 @@
 
       <!-- TODO fix the conditional styling -->
       <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month" [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0 }"
-        [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#f4f5f7', 'border':'dashed', 'border-color':'grey'}:{'background-color':'white'}">
+        [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#e9f1ef', 'border':'dashed', 'border-color':'#97c0b7'}:{'background-color':'white'}">
         <div class="card-body" (dblclick)="openModal(template, month, day)">
 
           <p class="card-title day-title">{{day}}</p>
@@ -63,7 +63,7 @@
         </p>
       </div>
 
-      <div *ngFor="let result of searchResults" class="results-disp jumbotron link" (click)="goToMonth(result.date)">
+      <div *ngFor="let result of searchResults" class="results-disp jumbotron link" (click)="selectResult(result.date)">
         <h3>{{result.title}}</h3> {{result.date|date:'fullDate'}}
       </div>
 
