--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -1,14 +1,47 @@
-<form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+<div *ngIf="!createFlow" id="fs_modal_header"><h3>Account Preferences <i class="fa fa-times link" (click)="close()"></i></h3></div>
 
-  <div class="form-group">
-    <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" required [(ngModel)]="user.email" name="email">
+<div class="container">
+  <div class="row">
+
+      <div *ngIf="!createFlow" class="offset-md-3 col-md-6 card">
+
+          Email: {{user.email}}
+          <br>
+          Version: Not Paid
+          <br>
+          <h2> Upgrade to paid Version</h2>
+
+
+          //TODO Form goes here to signup with STRIPE and get token
+          send token to service to update account status
+          
+          
+
+
+
+
+
+       
+        </div>
+
+
+
+    <div *ngIf="createFlow" class="offset-md-3 col-md-6 card">
+      <h1>Create Account</h1>
+      <form (ngSubmit)="onSubmit()" #heroForm="ngForm">
+
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" [(ngModel)]="user.password" name="password">
+        </div>
+
+        <button type="submit" class="btn btn-success">Sign Up</button>
+      </form>
+    </div>
   </div>
-
-  <div class="form-group">
-    <label for="alterEgo">Alter Ego</label>
-    <input type="password" class="form-control" id="alterEgo" [(ngModel)]="user.password" name="password">
-  </div>
-
-  <button class="btn btn-sucess">Submit</button>
-</form>
