--- a/src/app/account-widget/account-widget.component.html
+++ b/src/app/account-widget/account-widget.component.html
@@ -7,5 +7,6 @@
     <div class="card-body">
         <h6 (click)="signout()">Signout</h6> 
         <h6 (click)="goToAccountSettings()">Account Settings</h6>
+        <h6 (click)="goToAbout()">About</h6>
     </div>
   </div>
