--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -23,6 +23,7 @@
         </div>
       </div>
     </div>
+    
     <div class="calendar" [ngClass]=" showResults ? 'col-md-9': 'col-md-12'">
       <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]=" {'float-left': i%7!=0}">
         {{day}}
@@ -41,7 +42,7 @@
 
           <p class="card-title day-title">{{day}}</p>
           <div *ngFor="let appt of appointments[year][month][day]; index as i;">
-            <span class="card-link" (click)="selectAppt(month, day, i)" [style.background-color]="isSelected(month, day, i)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
+            <span class="card-link" (click)="selectAppt(month, day, i)" (dblclick)="editAppt(template, month, day, i)" [style.background-color]="isSelected(month, day, i)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
           </div>
         </div>
       </div>
@@ -114,7 +115,9 @@
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-danger" (click)="modalRef.hide()">Cancel</button>
+    <button class="btn btn-danger" (click)="cancelAppt()">Cancel</button>
     <button type="submit" class="btn btn-success" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
   </div>
 </ng-template>
+
+<!--{{appointments|json}} -->
