--- a/src/app/account-settings/account-settings.component.css
+++ b/src/app/account-settings/account-settings.component.css
@@ -1,6 +1,6 @@
 .card {
   margin-top: 150px;
-  padding: 10px;
+  padding: 60px;
 }
 
 #fs_modal_header {
@@ -32,4 +32,18 @@
 .link:hover {
   cursor: pointer;
   opacity: 1;
+  color:#97c0b7;
+}
+
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
+
+h1 {
+  margin-bottom:30px;
 }
