--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!createFlow" id="fs_modal_header">
+<div *ngIf="accountSettingsFlow" id="fs_modal_header">
   <h3>Account Preferences
     <i class="fa fa-times link" [routerLink]="['/calendar']"></i>
   </h3>
@@ -7,54 +7,91 @@
 <div class="container">
   <div class="row">
 
-    <div *ngIf="!createFlow" class="offset-md-3 col-md-6 card">
+    <div *ngIf="accountSettingsFlow" class="offset-md-3 col-md-6 card">
 
       Email: {{user.email}}
       <br> Version: Not Paid
       <br>
       <h2> Upgrade to paid Version</h2>
- 
-
-     
-  
-          <label for="card-element">
-            Credit or debit card
-          </label>
-          <div id="card-element">
-            <!-- A Stripe Element will be inserted here. -->
-          </div>
-      
-          <!-- Used to display form errors. -->
-          <div id="card-errors" role="alert"></div>
-     
-        <button (click)="submitPayment()" class="btn btn-success">Submit Payment</button>
 
 
 
 
+      <label for="card-element">
+        Credit or debit card
+      </label>
+      <div id="card-element">
+        <!-- A Stripe Element will be inserted here. -->
+      </div>
 
+      <!-- Used to display form errors. -->
+      <div id="card-errors" role="alert"></div>
+
+      <button (click)="submitPayment()" class="btn btn-success">Submit Payment</button>
 
 
     </div>
 
-
-
     <div *ngIf="createFlow" class="offset-md-3 col-md-6 card">
       <h1>Create Account</h1>
-      <form (ngSubmit)="createUser()" #heroForm="ngForm">
 
+      <form (ngSubmit)="createUser()" [formGroup]="userForm">
 
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
+          <input type="email" class="form-control" id="email" formControlName="email">
+          <div *ngIf="!(userForm.valid||userForm.get('email').pristine) && userForm.get('email').hasError('required')" class="alert alert-danger">
+            Email is required
+          </div>
+          <div *ngIf="!(userForm.valid||userForm.get('email').pristine || userForm.get('email').hasError('required')) && userForm.get('email').hasError('email')"
+            class="alert alert-danger">
+            Email is not valid
+          </div>
         </div>
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" [(ngModel)]="user.password" name="password">
+          <input type="password" class="form-control" id="password" formControlName="password"
+          pattern=".{5,}">
+          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')"
+            class="alert alert-danger">
+            Password is required
+          </div>
         </div>
 
-        <button type="submit" class="btn btn-success">Sign Up</button>
+        <button type="submit" class="btn btn-success" >Sign Up</button>
+        <span class="link" (click)="goToLogin()">Already have an account?</span>
+      </form>
+    </div>
+
+    <div *ngIf="loginFlow" class="offset-md-3 col-md-6 card">
+      <h1>Sign In</h1>
+      <form (ngSubmit)="loginUser()" [formGroup]="userForm">
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email" formControlName="email">
+          <div *ngIf="!(userForm.valid||userForm.get('email').pristine) && userForm.get('email').hasError('required')" class="alert alert-danger">
+            Email is required
+          </div>
+          <div *ngIf="!(userForm.valid||userForm.get('email').pristine || userForm.get('email').hasError('required')) && userForm.get('email').hasError('email')"
+            class="alert alert-danger">
+            Email is not valid
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" formControlName="password"
+          pattern=".{5,}">
+          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')"
+            class="alert alert-danger">
+            Password is required
+          </div>
+        </div>
+
+        <button type="submit" class="btn btn-success">Login</button>
+        <span class="link" (click)="goToCreate()">Create an account</span>
       </form>
     </div>
   </div>
