--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -5,7 +5,7 @@
   
   .card-day {
     height: 20px;
-    width: 13%;
+    width: 14%;
     border: none;
     overflow: scroll;
     margin-bottom: 20px;
@@ -15,21 +15,23 @@
   }
   
   .card-month {
-    height: 130px;
-    width: 13%;
+    height: 180px;
+    width: 14%;
     overflow: scroll;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   
   /* expanding input CSS only */
-  #myInput {
+  #searchInput {
     width: 230px;
     transition: width 0.3s ease-in-out;
     text-indent: 18px;
     margin: 5px;
+    z-index: 9999;
+
   }
   
-  #myInput:focus {
+  #searchInput:focus {
     width: 280px;
     transition: width 0.5s ease-in-out;
     outline: 0;
@@ -69,8 +71,6 @@
   
   .search-input {
     margin-top: .5%;
-    margin-left: 9%;
-    margin-right: -9%;
   }
   
   .ng-valid[required],
@@ -83,8 +83,7 @@
   }
   
   .calendar {
-
-    padding-left: 10%;
+    padding-left: 2.5%;
     background-color: #eee9d1;
   }
   
@@ -133,3 +132,4 @@
     z-index: 11;
   }
   
+
