--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -2,10 +2,11 @@
   <div class="row">
     <div class="col-md-12 header">
       <div class="row">
+
         <div class="col-sm-2 search-input">
           <form (ngSubmit)="searchAppts(searchInput.value)" #searchForm="ngForm">
             <div class="form-group">
-              <input type="text" class="form-control input-lg" style="outline:none" id="myInput" #searchInput placeholder="Search" />
+              <input type="text" class="form-control input-lg" style="outline:none" id="searchInput" #searchInput placeholder="Search" />
               <i class="fa fa-search"></i>
             </div>
           </form>
@@ -23,7 +24,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="calendar" [ngClass]=" showResults ? 'col-md-9': 'col-md-12'">
       <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]=" {'float-left': i%7!=0}">
         {{day}}
@@ -39,10 +40,10 @@
       <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month" [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0 }"
         [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#e9f1ef', 'border':'dashed', 'border-color':'#97c0b7'}:{'background-color':'white'}">
         <div class="card-body" (dblclick)="openModal(template, month, day)">
-
+         
           <p class="card-title day-title">{{day}}</p>
           <div *ngFor="let appt of appointments[year][month][day]; index as i;">
-            <span class="card-link" (click)="selectAppt(month, day, i)" (dblclick)="editAppt(template, month, day, i)" [style.background-color]="isSelected(month, day, i)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
+            <span class="card-link" (click)="selectAppt(month, day, i, appt.id)" (dblclick)="editAppt(template, month, day, i)" [style.background-color]="isSelected(appt.id)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
           </div>
         </div>
       </div>
@@ -104,13 +105,6 @@
           <input type="tel" class="form-control" name="tel" [(ngModel)]="appointment.phoneNumber">
         </div>
       </div>
-      <div class="form-group row">
-        <label for="tel" class="col-sm-2 col-form-label">Text</label>
-        <div class="col-sm-8">
-
-          <input type="checkbox" class="form-control" name="textNotification" [(ngModel)]="appointment.textNotification">
-        </div>
-      </div>
     </form>
   </div>
 
@@ -119,5 +113,3 @@
     <button type="submit" class="btn btn-success" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
   </div>
 </ng-template>
-
-<!--{{appointments|json}} -->
