--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,20 +6,31 @@
 
 <div class="container">
 
-  <p>
-    unas is the best scheduler out there
-  </p>
+  <div>
+    <header>
+      <h1>Making scheduling simpler, more pleasant, and more productive</h1>
+    </header>
+  </div>
 
+  <h1>How to use</h1>
+  <p>
+   You can change months with left and right arrow keys. When you need to schedule an appointment just double click
+   on the day and add the information.
+
+   you can edit the appointment by double clicking it as well. Input the phone number without any brackets or any dashes
+   just the seven digit number you wish to notify.
+
+   You can delete an appointment by selecting it and pressing delete key.
+  </p>
+  
 
   <h1> Security</h1>
   <p>
-    Unas is end to end encrypted. All payments process with UNa are done through Stripe so we never have access to any credit
-    card information making us PCI compliance. Stripe is also Stripe has been audited by a PCI-certified auditor and is certified
+    Unas is end to end encrypted. All payments processed with UNAS are done through Stripe so we never have access to any credit
+    card information making us PCI compliance. Stripe has been audited by a PCI-certified auditor and is certified
     to PCI Service Provider Level 1. This is the most stringent level of certification available in the payments industry.
     To accomplish this, we make use of best-in-class security tools and practices to maintain a high level of security at
     Stripe.
-
-
   </p>
 
 </div>
