--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -9,27 +9,40 @@
 
     <div *ngIf="accountSettingsFlow" class="offset-md-3 col-md-6 card">
 
-      Email: {{user.email}}
-      <br> Version: Not Paid
-      <br>
-      <h2> Upgrade to paid Version</h2>
+      <div class="account-info">
+        Email: {{user.email}}
+        <div *ngIf="accountType == 'FREE'">
+          <br> Version: Not Paid
+          <br> Upgrade to paid Version by paying below
+        </div>
 
+        <div *ngIf="accountType == 'EXPIRED'">
+          <br> Version: Expired
+          <br> Expired: {{expDate}} Please pay your monthly bill to continue service
+        </div>
 
+        <div *ngIf="accountType == 'CURRENT'">
+          <br> Version: PAID
+          <br> Expires: {{expDate|date:'short'}}
 
-
-      <label for="card-element">
-        Credit or debit card
-      </label>
-      <div id="card-element">
-        <!-- A Stripe Element will be inserted here. -->
+        </div>
       </div>
 
-      <!-- Used to display form errors. -->
-      <div id="card-errors" role="alert"></div>
+      <div *ngIf="accountType != 'CURRENT'" class="payment-section">
+        <label for="card-element">
+          Credit or debit card
+        </label>
+        <div id="card-element">
+          <!-- A Stripe Element will be inserted here. -->
+        </div>
 
-      <button (click)="submitPayment()" class="btn btn-success">Submit Payment</button>
+        <!-- Used to display form errors. -->
+        <div id="card-errors" role="alert"></div>
+        <br>
 
+        <button (click)="submitPayment()" class="btn btn-success">Submit Payment</button>
 
+      </div>
     </div>
 
     <div *ngIf="createFlow" class="offset-md-3 col-md-6 card">
@@ -51,15 +64,13 @@
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password"
-          pattern=".{5,}">
-          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')"
-            class="alert alert-danger">
+          <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}">
+          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')" class="alert alert-danger">
             Password is required
           </div>
         </div>
 
-        <button type="submit" class="btn btn-success" >Sign Up</button>
+        <button type="submit" class="btn btn-success">Sign Up</button>
         <span class="link" (click)="goToLogin()">Already have an account?</span>
       </form>
     </div>
@@ -82,10 +93,8 @@
 
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password"
-          pattern=".{5,}">
-          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')"
-            class="alert alert-danger">
+          <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}">
+          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')" class="alert alert-danger">
             Password is required
           </div>
         </div>
