--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -26,7 +26,7 @@
 
   <h1> Security</h1>
   <p>
-    Unas is end to end encrypted. All payments processed with UNAS are done through Stripe so we never have access to any credit
+    Scheduly is end to end encrypted. All payments processed with Scheduly are done through Stripe so we never have access to any credit
     card information making us PCI compliance. Stripe has been audited by a PCI-certified auditor and is certified
     to PCI Service Provider Level 1. This is the most stringent level of certification available in the payments industry.
     To accomplish this, we make use of best-in-class security tools and practices to maintain a high level of security at
