--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -7,7 +7,7 @@
 <div class="container">
   <div class="row">
 
-    <div *ngIf="accountSettingsFlow" class="offset-md-3 col-md-6 card">
+    <div class="offset-md-3 col-md-6 card">
 
       <div class="account-info">
         Email: {{user.email}}
@@ -45,35 +45,7 @@
       </div>
     </div>
 
-    <div *ngIf="createFlow" class="offset-md-3 col-md-6 card">
-      <h1>Create Account</h1>
 
-      <form (ngSubmit)="createUser()" [formGroup]="userForm">
-
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email">
-          <div *ngIf="!(userForm.valid||userForm.get('email').pristine) && userForm.get('email').hasError('required')" class="alert alert-danger">
-            Email is required
-          </div>
-          <div *ngIf="!(userForm.valid||userForm.get('email').pristine || userForm.get('email').hasError('required')) && userForm.get('email').hasError('email')"
-            class="alert alert-danger">
-            Email is not valid
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}">
-          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')" class="alert alert-danger">
-            Password is required
-          </div>
-        </div>
-
-        <button type="submit" class="btn btn-success">Sign Up</button>
-        <span class="link" (click)="goToLogin()">Already have an account?</span>
-      </form>
-    </div>
 
     <div *ngIf="loginFlow" class="offset-md-3 col-md-6 card">
       <h1>Sign In</h1>
