--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -6,7 +6,8 @@
         <div class="col-sm-2 search-input">
           <form (ngSubmit)="searchAppts(searchInput.value)" #searchForm="ngForm">
             <div class="form-group">
-              <input type="text" class="form-control input-lg" style="outline:none" id="searchInput" #searchInput placeholder="Search" />
+              <input type="text" class="form-control input-lg" style="outline:none" id="searchInput" #searchInput
+                placeholder="Search" />
               <i class="fa fa-search"></i>
             </div>
           </form>
@@ -26,7 +27,7 @@
     </div>
 
     <div class="calendar" [ngClass]=" showResults ? 'col-md-9': 'col-md-12'">
-      <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]=" {'float-left': i%7!=0}">
+      <div *ngFor="let day of daysTxt; let i of index;" class="card card-day" [ngClass]="{'float-left': i%7!=0}">
         {{day}}
       </div>
       <br>
@@ -37,17 +38,18 @@
       </div>
 
       <!-- TODO fix the conditional styling - this fucks up when year changes -->
-      <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month" [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0 }"
-        [ngStyle]="(dayOfMonth == day) && (currentMonth == month)? {'background-color':'#e9f1ef', 'border':'dashed', 'border-color':'#97c0b7'}:{'background-color':'white'}">
+      <div *ngFor="let day of Object.keys(appointments[year][month]); let i of index;" class="card card-month"
+        [ngClass]="{'float-left': i +dayOfWeekFirstOfMonth.length %7!=0, 'is-today-card':(dayOfMonth == day) && (currentMonth == month)}">
 
+        <div class="card-body" (dblclick)="openModal(template, month, day)">
 
-         <div class="card-body" (dblclick)="openModal(template, month, day)">
-         
           <p class="card-title day-title">{{day}}</p>
           <div *ngFor="let appt of appointments[year][month][day]; index as i;">
-            <span class="card-link" (click)="selectAppt(month, day, i, appt.id)" (dblclick)="editAppt(template, month, day, i)" [style.background-color]="isSelected(appt.id)?'lightblue' : 'white'">{{appt.title}} - {{appt.time|date:'shortTime'}}</span>
+            <span class="card-link" (click)="selectAppt(month, day, i, appt.id)" (dblclick)="editAppt(template, month, day, i)"
+              [style.background-color]="isSelected(appt.id)?'lightblue' : 'white'">{{appt.title}} -
+              {{appt.time|date:'shortTime'}}</span>
           </div>
-        </div> 
+        </div>
       </div>
     </div>
 
@@ -99,7 +101,8 @@
       <div class="form-group row">
         <label for="time" class="col-sm-2 col-form-label">Time</label>
         <div class="col-sm-10">
-          <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time" required></timepicker>
+          <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"
+            required></timepicker>
         </div>
       </div>
       <div class="form-group row">
