--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="accountSettingsFlow" id="fs_modal_header">
+<div id="fs_modal_header">
   <h3>Account Preferences
     <i class="fa fa-times link" [routerLink]="['/calendar']"></i>
   </h3>
@@ -43,36 +43,5 @@
         <button (click)="submitPayment()" class="btn btn-success">Submit Payment</button>
 
       </div>
-    </div>
-
-
-
-    <div *ngIf="loginFlow" class="offset-md-3 col-md-6 card">
-      <h1>Sign In</h1>
-      <form (ngSubmit)="loginUser()" [formGroup]="userForm">
-
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email">
-          <div *ngIf="!(userForm.valid||userForm.get('email').pristine) && userForm.get('email').hasError('required')" class="alert alert-danger">
-            Email is required
-          </div>
-          <div *ngIf="!(userForm.valid||userForm.get('email').pristine || userForm.get('email').hasError('required')) && userForm.get('email').hasError('email')"
-            class="alert alert-danger">
-            Email is not valid
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}">
-          <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')" class="alert alert-danger">
-            Password is required
-          </div>
-        </div>
-
-        <button type="submit" class="btn btn-success">Login</button>
-        <span class="link" (click)="goToCreate()">Create an account</span>
-      </form>
     </div>
   </div>
