--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="!createFlow" id="fs_modal_header">
   <h3>About
-    <i class="fa fa-times link" [routerLink]="['/calendar']"></i>
+    <i class="fa fa-times link" [routerLink]="['/']"></i>
   </h3>
 </div>
 
