--- a/src/app/account-settings/account-settings.component.html
+++ b/src/app/account-settings/account-settings.component.html
@@ -1,6 +1,6 @@
 <div id="fs_modal_header">
   <h3>Account Preferences
-    <i class="fa fa-times link" [routerLink]="['/calendar']"></i>
+    <i class="fa fa-times link" [routerLink]="['/']"></i>
   </h3>
 </div>
 
