changed url of service

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <!-- navbar header -->
 <div class="col-md-12 header">
     <div class="row">
-        <a class="navbar-brand" href="http://www.unas.io">Scheduly</a>
+        <a class="navbar-brand" href="https://scheduly.app">Scheduly</a>
     </div>
 </div>
 <!-- end of navbar header -->
