added more details to about section

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,25 +12,59 @@
     </header>
   </div>
 
-  <h1>How to use</h1>
+  <h1>What is Scheduly</h1>
+
   <p>
-   You can change months with left and right arrow keys. When you need to schedule an appointment just double click
-   on the day and add the information.
-
-   you can edit the appointment by double clicking it as well. Input the phone number without any brackets or any dashes
-   just the seven digit number you wish to notify.
-
-   You can delete an appointment by selecting it and pressing delete key.
+    Scheduly provides free mobile text alerts for fifteen days and then after that there is small fee (We have to pay
+    server costs and text messaging rates), which allows business owners to maintain a calendar with all the scheduled
+    appointments, and Scheduly automatically sends them a SMS message.
   </p>
-  
+
+  <h1>How to setup text alerts</h1>
+  <p>
+    You can change months with left and right arrow keys. When you need to schedule an appointment just double click
+    on the day and add the information.
+
+    you can edit the appointment by double clicking it as well. Input the phone number without any brackets or any
+    dashes
+    just the seven digit number you wish to notify.
+
+    You can delete an appointment by selecting it and pressing delete key.
+  </p>
+
 
   <h1> Security</h1>
   <p>
-    Scheduly is end to end encrypted. All payments processed with Scheduly are done through Stripe so we never have access to any credit
+    Scheduly is end to end encrypted. All payments processed with Scheduly are done through Stripe so we never have
+    access to any credit
     card information making us PCI compliance. Stripe has been audited by a PCI-certified auditor and is certified
-    to PCI Service Provider Level 1. This is the most stringent level of certification available in the payments industry.
-    To accomplish this, we make use of best-in-class security tools and practices to maintain a high level of security at
+    to PCI Service Provider Level 1. This is the most stringent level of certification available in the payments
+    industry.
+    To accomplish this, we make use of best-in-class security tools and practices to maintain a high level of security
+    at
     Stripe.
   </p>
+
+
+  <h1>Benefits of using a SMS reminder service</h1>
+
+  <b>1.Reduce No-Shows and Waiting Lists</b>
+  <p>
+    No shows are a costly problem in any business. Letting a time slot go to waste because a customer forgot
+    to show up, or cancel can cost businesses thousands. With this product you will be proactive in solving this issue
+    and it has been proven sending a notification a day prior will reduct no shows by an immense number.
+  </p>
+
+  <b>2.Increase Customer Satisfaction </b>
+  <p>
+    Using this sofware improves overall customer satisfaction. Customers feel good about being reminded about upcoming
+    via text message, a method that is not intrusive, and they can respond at a time that is most convenient for them.
+  </p>
+
+  <h1>Contact Us</h1>
+  <p>
+    Please reach out to us with any ideas, concerns, issues. Any feedback is greatly appreciated!
+  </p>
+  <a href="mailto:support@scheduly.app">support@scheduly.app</a>
 
 </div>
