added padding to bottom of calendar

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -85,7 +85,7 @@
   <div class="modal-header">
     <h4 class="modal-title pull-left">Add Appointment</h4>
   </div>
-  <!-- TODO make sure its seleceted when open-->
+  <!-- TODO make sure its selected when open-->
   <div class="modal-body">
 
     <form #apptForm="ngForm">
