--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -56,6 +56,7 @@
       </div>
     </div>
 
+    <!-- Results Pane-->
     <div *ngIf="showResults" class="col-md-3 search-results">
       <div class="row results-header">
         <div class="col-sm-10 text-left">
@@ -75,50 +76,44 @@
       <div *ngFor="let result of searchResults" class="results-disp jumbotron link" (click)="selectResult(result.date)">
         <h3>{{result.title}}</h3> {{result.date|date:'fullDate'}}
       </div>
-
     </div>
+
   </div>
 </div>
+
 
 <!-- TODO extract to separate component -->
 <ng-template #template>
   <div class="modal-header">
-    <h4 class="modal-title pull-left">Add Appointment</h4>
+    <h4 class="modal-title pull-left">Create Appointment</h4>
   </div>
   <!-- TODO make sure its selected when open-->
   <div class="modal-body">
 
     <form #apptForm="ngForm">
       <div class="form-group row">
-        <label for="title" class="col-sm-2 col-form-label">Title</label>
-        <div class="col-sm-10">
+        <label for="title" class="col-md-2 col-form-label">Info</label>
+        <div class="col-md-10">
           <input type="text" name="title" class="form-control" id="title" [(ngModel)]="appointment.title" required>
         </div>
       </div>
       <div class="form-group row">
-        <label for="desc" class="col-sm-2 col-form-label" style="font-size: .85em;">Description</label>
-        <div class="col-sm-10">
-          <textarea class="form-control" id="desc" name="description" [(ngModel)]="appointment.description"> </textarea>
+        <label for="time" class="col-md-2 col-form-label">Time</label>
+        <div class="col-md-10 text-center">
+          <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"></timepicker>
         </div>
       </div>
       <div class="form-group row">
-        <label for="time" class="col-sm-2 col-form-label">Time</label>
-        <div class="col-sm-10">
-          <timepicker [(ngModel)]="mytime" [showMeridian]="true" id="time" [(ngModel)]="appointment.time" name="time"
-            required></timepicker>
-        </div>
-      </div>
-      <div class="form-group row">
-        <label for="tel" class="col-sm-2 col-form-label">Phone #</label>
-        <div class="col-sm-8">
-          <input type="tel" class="form-control" name="tel" [(ngModel)]="appointment.phoneNumber">
+        <label for="tel" class="col-md-2 col-form-label">Phone </label>
+        <div class="col-md-10">
+          <input type="tel" class="form-control" name="tel" [(ngModel)]="appointment.phoneNumber" required>
         </div>
       </div>
     </form>
   </div>
 
   <div class="modal-footer">
-    <button class="btn btn-danger" (click)="cancelAppt()">Cancel</button>
-    <button type="submit" class="btn btn-success" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
+      <button type="submit" class="btn btn-save" (click)="saveAppt()" [disabled]="!apptForm.form.valid">Save</button>
+    <button class="btn btn-cancel" (click)="cancelAppt()">Cancel</button>
   </div>
 </ng-template>
