--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -269,8 +269,8 @@
 }
 
 .slide-out-right {
-  -webkit-animation: slide-out-right .5s cubic-bezier(.55, .085, .68, .53) both;
-  animation: slide-out-right .5s cubic-bezier(.55, .085, .68, .53) both
+	-webkit-animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: slide-out-right 0.5s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
 
 @-webkit-keyframes slide-left {
@@ -294,29 +294,27 @@
     transform: translateX(-100px)
   }
 }
-
 @-webkit-keyframes slide-out-right {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
+            transform: translateX(0);
+    opacity: 1;
   }
   100% {
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
-    opacity: 0
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
   }
 }
-
 @keyframes slide-out-right {
   0% {
     -webkit-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
+            transform: translateX(0);
+    opacity: 1;
   }
   100% {
-    -webkit-transform: translateX(100px);
-    transform: translateX(100px);
-    opacity: 0
+    -webkit-transform: translateX(1000px);
+            transform: translateX(1000px);
+    opacity: 0;
   }
 }
