added company name as part of text message

--- a/src/app/account-widget/account-widget.component.html
+++ b/src/app/account-widget/account-widget.component.html
@@ -1,6 +1,6 @@
 <p></p>
 
-  <span class="account-text" placement="bottom">Welcome, {{userEmail}}! <i (click)="showMenu=!showMenu" class=" user-name fa fa-cog" aria-hidden="true"></i></span>
+  <span class="account-text" placement="bottom">Welcome, {{companyName}}! <i (click)="showMenu=!showMenu" class=" user-name fa fa-cog" aria-hidden="true"></i></span>
 
   <div *ngIf="showMenu" class="preferences card">
     <div class="card-body">
