--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -12,21 +12,23 @@
     </div>
 
     <form (ngSubmit)="createUser()" [formGroup]="userForm">
-
+        <div class="form-group">
+            <input class="form-control" id="companyName" formControlName="companyName" placeholder="Company Name">
+            <div *ngIf="!(userForm.valid||userForm.get('companyName').pristine) && userForm.get('companyName').hasError('required')"
+                class="alert alert-danger">
+                Company name is required
+            </div>
+        </div>
         <div class="form-group">
             <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email Address">
             <div *ngIf="!(userForm.valid||userForm.get('email').pristine) && userForm.get('email').hasError('required')"
                 class="alert alert-danger">
                 Email is required
             </div>
-            <div *ngIf="!(userForm.valid||userForm.get('email').pristine || userForm.get('email').hasError('required')) && userForm.get('email').hasError('email')"
-                class="alert alert-danger">
-                Email is not valid
-            </div>
         </div>
-
         <div class="form-group">
-            <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}" placeholder="Password">
+            <input type="password" class="form-control" id="password" formControlName="password" pattern=".{5,}"
+                placeholder="Password">
             <div *ngIf="!(userForm.valid||userForm.get('password').pristine) && userForm.get('password').hasError('required')"
                 class="alert alert-danger">
                 Password is required
